[package]
name = "ezlog"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
keywords = ["log"]
readme = "readme.md"
description = "easy to use logger"
repository = "https://github.com/tongubin/ezlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
colored = "2.1.0"
